--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.16.7",
+    "i18next": "^22.5.1",
+    "react-i18next": "^12.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
